--- a/.github/workflows/release-dylib.yml
+++ b/.github/workflows/release-dylib.yml
@@ -22,8 +22,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install dependencies
         run: |
-          apt update -y
-          apt upgrade -y
+          apt update
           apt install bash curl sudo -y
           bash -c "$(curl -fsSL https://raw.githubusercontent.com/theos/theos/master/bin/install-theos)"
           cd /
