--- a/.github/workflows/release-dylib.yml
+++ b/.github/workflows/release-dylib.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install dependencies
         run: |
-          apt install bash curl sudo -y
+          apt install bash curl
           bash -c "$(curl -fsSL https://raw.githubusercontent.com/theos/theos/master/bin/install-theos)"
           cd /
           ls -a
