--- a/.github/workflows/release-dylib.yml
+++ b/.github/workflows/release-dylib.yml
@@ -24,10 +24,10 @@ jobs:
           path: LuckySpeeder
       - name: Install dependencies
         run: |
-          sudo apt update -y
-          sudo apt upgrade -y
-          sudo apt install bash curl sudo -y
-          bash -c "$(curl -fsSL https://raw.githubusercontent.com/theos/theos/master/bin/install-theos)"
+          # sudo apt update -y
+          # sudo apt upgrade -y
+          # sudo apt install bash curl sudo -y
+          # bash -c "$(curl -fsSL https://raw.githubusercontent.com/theos/theos/master/bin/install-theos)"
       - name: Compile tweak
         run: |
           cd /home/runner/work
