--- a/.github/workflows/release-dylib.yml
+++ b/.github/workflows/release-dylib.yml
@@ -22,10 +22,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Install dependencies
         run: |
-          # sudo apt update -y
-          # sudo apt upgrade -y
-          # sudo apt install bash curl sudo -y
-          # bash -c "$(curl -fsSL https://raw.githubusercontent.com/theos/theos/master/bin/install-theos)"
+          sudo apt update -y
+          sudo apt upgrade -y
+          sudo apt install bash curl sudo -y
+          bash -c "$(curl -fsSL https://raw.githubusercontent.com/theos/theos/master/bin/install-theos)"
       - name: Compile tweak
         run: |
           cd /home/runner/work/LuckySpeeder/LuckySpeeder
