--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
-          name: "LuckySpeeder with some changes -> check the README file"
+          name: "Release - LuckySpeeder with some changes -> check the README file"
           body: "Date: 2025-23-02-02-25 This is a fork which adds more multipliers to the overlay + being able to start/pause in the contracted view."
           draft: 0
           prerelease: 0
